# BallsDex-Leaderboard-Pack

./: LICENSE  README.md  pyproject.toml
leaderboard/: __init__.py  apps.py  cog.py
leaderboard/package/: __init__.py  cog.py
