[project]
name = "leaderboard"
version = "0.0.1"

description = "Leaderboard package for BallsDex"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "hiboman", email="hiboman@proton.me" },
]
readme = "README.md"

# dependencies = [
#     "ballsdex>=3.0.0",
# ]

[project.urls]
Repository = "https://github.com/MapsDex-Team/BallsDex-Leaderboard-Pack"
Documentation = "https://github.com/MapsDex-Team/BallsDex-Leaderboard-Pack#readme"
Issues = "https://github.com/MapsDex-Team/BallsDex-Leaderboard-Pack/issues"
